# scenera-niceapi

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: run_test.yml
docs/: README.md
docs/source/: conf.py  index.rst  niceapi.rst
src/niceapi/: __init__.py  enums.py
src/niceapi/annotations/: __init__.py  regex_typing.py  scenemode.py
src/niceapi/api/: _api.py  _mode.py  common.py  control.py  crypto.py  data.py  endpoint.py  handlers.py  management.py  mark.py  requests.py  security.py
src/niceapi/cmf/: _request.py  _response.py
src/niceapi/crypto/: _utility.py  base.py  jose.py
src/niceapi/io/: _webapi.py  _webapi_default.py  webapi_base.py
src/niceapi/util/: _json_utils.py  _storage.py  _tools.py
src/niceapi/util/mode_manager/: __init__.py  _health_check.py  _nodes.py  _utils.py  constants.py  (+2 more)
tests/: conftest.py
tests/niceapi/: __init__.py
tests/niceapi/api/: __init__.py  test_api.py  test_common.py  test_control.py  test_crypto.py  test_data.py  test_endpoint.py  test_handlers.py  test_management.py  test_mark.py  test_mode.py  test_requests.py  test_security.py
tests/niceapi/cmf/: __init__.py  test_request.py  test_response.py
tests/niceapi/crypto/: __init__.py  test_base.py  test_jose.py  test_utility.py
tests/niceapi/io/: __init__.py  test_webapi.py  test_webapi_base.py  test_webapi_default.py
tests/niceapi/util/: __init__.py  test_mode_manager.py  test_storage.py  test_tools.py
