[metadata]
name = niceapi
version = attr: niceapi.__version__
description = NICE API packages
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
license_files = LICENSE
author = Sony Semiconductor Solutions Corp.
url = 
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir = 
    = src
packages =
    niceapi
    niceapi.api
    niceapi.cmf
    niceapi.crypto
    niceapi.io
    niceapi.util
zip_safe = False
include_package_data = True
install_requires =
    authlib @ git+https://github.com/lepture/authlib.git
    pycryptodomex
    cryptography
    requests
    numpy
python_requires = >=3.6

[flake8]
max-line-length = 79
# E203: Whitespace before ':'
# W503: Line break occurred before a binary operator
# W504: Line break occurred after a binary operator
ignore = E203, W503, W504
exclude =
    .git
    __pychache__
    .tox
    .venv
    **/migrations

[mypy]
ignore_missing_imports = True
